@@ -18,17 +18,23 @@ package org.apache.solr.cloud;
  */
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.InputStream;
+import java.io.IOException;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 import java.util.SortedMap;
 
-import org.apache.commons.io.IOUtils;
+import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.embedded.JettySolrRunner;
+import org.apache.solr.client.solrj.impl.CloudSolrClient;
+import org.apache.solr.client.solrj.request.QueryRequest;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.zookeeper.CreateMode;
+import org.apache.solr.common.params.CollectionParams.CollectionAction;
+import org.apache.solr.common.params.CoreAdminParams;
+import org.apache.solr.common.params.ModifiableSolrParams;
+import org.apache.solr.common.util.NamedList;
+import org.apache.zookeeper.KeeperException;
 import org.eclipse.jetty.servlet.ServletHolder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,6 +46,7 @@ public class MiniSolrCloudCluster {
   private ZkTestServer zkServer;
   private List<JettySolrRunner> jettys;
   private File testDir;
+  private CloudSolrClient solrClient;
 
   /**
    * "Mini" SolrCloud cluster to be used for testing
@@ -59,18 +66,10 @@ public class MiniSolrCloudCluster {
       + "zookeeper/server1/data";
     zkServer = new ZkTestServer(zkDir);
     zkServer.run();
-
-    SolrZkClient zkClient = null;
-    InputStream is = null;
-    try {
-      zkClient = new SolrZkClient(zkServer.getZkHost(),
-        AbstractZkTestCase.TIMEOUT, 45000, null);
-      zkClient.makePath("/solr", false, true);
-      is = new FileInputStream(solrXml);
-      zkClient.create("/solr/solr.xml", IOUtils.toByteArray(is), CreateMode.PERSISTENT, true);
-    } finally {
-      IOUtils.closeQuietly(is);
-      if (zkClient != null) zkClient.close();
+    
+    try(SolrZkClient zkClient = new SolrZkClient(zkServer.getZkHost(),
+        AbstractZkTestCase.TIMEOUT, 45000, null)) {
+      zkClient.makePath("/solr/solr.xml", solrXml, false, true);
     }
 
     // tell solr to look in zookeeper for solr.xml
@@ -81,6 +80,8 @@ public class MiniSolrCloudCluster {
     for (int i = 0; i < numServers; ++i) {
       startJettySolrRunner(hostContext, extraServlets, extraRequestFilters);
     }
+    
+    solrClient = buildSolrClient();
   }
 
   /**
@@ -126,12 +127,40 @@ public class MiniSolrCloudCluster {
     jettys.remove(index);
     return jetty;
   }
+  
+  public void uploadConfigDir(File configDir, String configName) throws IOException, KeeperException, InterruptedException {
+    try(SolrZkClient zkClient = new SolrZkClient(zkServer.getZkAddress(),
+        AbstractZkTestCase.TIMEOUT, 45000, null)) {
+      ZkController.uploadConfigDir(zkClient, configDir, configName);
+    }
+  }
+  
+  public NamedList<Object> createCollection(String name, int numShards, int replicationFactor, 
+      String configName, Map<String, String> collectionProperties) throws SolrServerException, IOException {
+    ModifiableSolrParams params = new ModifiableSolrParams();
+    params.set(CoreAdminParams.ACTION, CollectionAction.CREATE.name());
+    params.set(CoreAdminParams.NAME, name);
+    params.set("numShards", numShards);
+    params.set("replicationFactor", replicationFactor);
+    params.set("collection.configName", configName);
+    if(collectionProperties != null) {
+      for(Map.Entry<String, String> property : collectionProperties.entrySet()){
+        params.set(CoreAdminParams.PROPERTY_PREFIX + property.getKey(), property.getValue());
+      }
+    }
+    
+    QueryRequest request = new QueryRequest(params);
+    request.setPath("/admin/collections");
+    
+    return solrClient.request(request);
+  }
 
   /**
    * Shut down the cluster, including all Solr nodes and ZooKeeper
    */
   public void shutdown() throws Exception {
     try {
+      solrClient.shutdown();
       for (int i = jettys.size() - 1; i >= 0; --i) {
         stopJettySolrRunner(i);
       }
@@ -143,6 +172,14 @@ public class MiniSolrCloudCluster {
         System.clearProperty("zkHost");
       }
     }
+  }
+  
+  public CloudSolrClient getSolrClient() {
+    return solrClient;
+  }
+  
+  protected CloudSolrClient buildSolrClient() {
+    return new CloudSolrClient(getZkServer().getZkAddress());
   }
 
   private static String getHostContextSuitableForServletContext(String ctx) {
